Coded the footer at the mid screen size. Adjusted the fonts down. At the large screen size, fixed the nav links so they remain inline when the color change happens. Also fixed the pill button that appears when the color change happens on thos links. Added shading around the project screenshots so they pop out of the screen.

--- a/css/main.css
+++ b/css/main.css
@@ -117,28 +117,28 @@ textarea {
 
    h1 {
     font-family: 'Poppins', sans-serif;
-    font-size: 2.5em;
-    font-weight: 500;
+    font-size: 1.75rem;
+    line-height: 1.5;
    }
 
    h2 {
     font-family: 'Poppins', sans-serif;
-    font-size: 2em;
-    font-weight: 500;
+    font-size: 1.75rem;
+
    }
 
    h3,
    h4 {
     font-family: 'Poppins', sans-serif;
-    font-size: 1.5em;
-    font-weight: 500;
+    font-size: 1.25em;
+    line-height: 1.5rem;
     margin: 20px 0;
    }
 
 
    p {
-    font-size: 1em;
-    line-height: 1.285;
+    font-size: 1rem;
+    line-height: 1.5;
    }
 
 
@@ -156,8 +156,9 @@ textarea {
      }
 
      img {
-      width: 90%;
+      width: 100%;
       height: auto;
+
      }
 
      figure {
@@ -191,8 +192,7 @@ textarea {
 
    header nav {
     width: 100%;
-    font-size: .75em;
-    font-weight: 150;
+
     text-transform: uppercase;
     display: flex;
     justify-content: center;
@@ -210,17 +210,21 @@ textarea {
    }
 
    header nav ul li {
-    font-size: 1.125em;
+    font-size: .75rem;
     font-weight: 800;
 
 
    }
 
-
+   figure {
+    margin: 20px 0 40px 0;
+}
 
    footer {
+    display: flex;
     text-align: center;
-    flex-direction: column;
+    flex-flow: row wrap;
+    justify-content: center;
    }
 
    footer p {
@@ -229,19 +233,28 @@ textarea {
    }
 
    footer .content-wrapper {
-    width: 55%;
+    width: 80%;
     margin: 50px 0;
    }
 
-   footer .contact {
-    margin-bottom: 50px;
+
+
+  footer .social {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+  }
+
+   footer .social h4 {
+     width: 100%;
+     margin-top: 40px;
    }
 
    footer .social-icons {
     display: flex;
     justify-content: space-around;
     align-items: center;
-
+    width: 200px;
    }
 
    footer .social-icons p {
@@ -259,7 +272,7 @@ textarea {
    }
 
    footer .copyright {
-    margin: 20px 0;
+    margin: 40px 0;
    }
 
    /*--------------Mobile Styles-------------------- */
@@ -295,6 +308,16 @@ textarea {
      padding-bottom: 30px;
    }
 
+   .projects article {
+     margin-left: 10px;
+     margin-right: 10px;
+   }
+
+   .projects figure {
+     width: 100%;
+    filter: drop-shadow(1px 2px 6px lightgrey);
+
+  }
 
    .projects h2 {
      text-align: center;
@@ -310,6 +333,7 @@ textarea {
      margin-left: auto;
      margin-right: auto;
    }
+
     a.live-link {
     display: inline-block;
     background-color: #453E4F;
@@ -376,11 +400,34 @@ textarea {
      flex-flow: row wrap;
    }
 
-   .about h2, h3 {
+   .about figure {
+     width: 85%;
+   }
+
+   .about figure img {
+     width: 100%;
+   }
+
+   .about h2 {
      width: 100%;
      text-align: center;
    }
 
+   .andy {
+     display: flex;
+     justify-content: center;
+     flex-flow: row wrap;
+   }
+
+   .andy h3 {
+     width: 75%;
+     text-align: center;
+   }
+
+   .andy p {
+     width: 80%;
+     text-align: left;
+   }
 
 
    .about a {
@@ -402,6 +449,9 @@ textarea {
      margin-bottom: 6px;
    }
 
+   footer .copyright {
+     width: 100%;
+   }
 
 
 /* ==========================================================================
@@ -509,7 +559,7 @@ textarea {
 /*Tablet styles here*/
 
 .content-wrapper {
-  max-width: 740px;
+  max-width: 760px;
   margin: 100px 0;
 }
 
@@ -617,20 +667,46 @@ p.skills-box {
 }
 
 .about figure {
-  width: 65%;
+  width: 64%;
   height: auto;
+  margin: auto;
 }
 
-.about h3 {
+.about figure img {
+  width: 100%;
+}
+
+
+
+.andy h3 {
   width: 60%;
-  padding-left: 80px;
-  padding-right: 80px;
+
 }
 
-.about p {
-  width: 70%;
-  padding-left: 80px;
-  padding-right: 80px;
+.andy p {
+  width: 65%;
+
+}
+
+ /*footer .content-wrapper {
+   width: 100%;
+ }*/
+.contact {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+footer .social h4 {
+
+  margin-top: 20px;
+}
+
+.connect {
+  width: 30%;
+  padding-top: 0;
+  margin-top: 0;
 }
 
 }
@@ -638,13 +714,23 @@ p.skills-box {
 @media only screen and (min-width:1200px) {
 /*Desktop styles here*/
 
+.content-wrapper {
+  max-width: 1190px;
+  margin: 100px 0;
+}
+
 /* General styles */
 
-li a:hover {
-      display: block;
+nav ul li a {
+  display: block;
+  padding: 10px 10px;
+
+}
+
+nav ul li a:hover {
+
       background-color: #EEEFDA;
-      padding: 10px 10px;
-      border-radius: 40%;
+      border-radius: 30px;
  }
 
 
